@@ -1,4 +1,5 @@
 language: perl
+
 sudo: false
 
 addons:
@@ -7,7 +8,7 @@ addons:
       - libarchive-dev
 
 install:
-  - perlbrew list
+  - ./maint/travis-install-mods
   - dzil authordeps --missing | cpanm -n
   - dzil listdeps --missing | cpanm -n  
 
@@ -18,10 +19,14 @@ perl:
   - "5.20"
   - "5.22"
   - "5.24"
+  - "5.26"
 
-env:
-  - ALIEN_LIBARCHIVE=share
-  - ALIEN_LIBARCHIVE=system
+matrix:
+  global:
+    - ALIEN_BASE_NO_ABMB=1
+  env:
+    - ALIEN_LIBARCHIVE=share
+    - ALIEN_LIBARCHIVE=system
 
 script:
   - dzil test -v
