@@ -33,8 +33,9 @@ remove = File::Basename
 
 [Prereqs / Configure]
 -phase = configure
-Alien::Libarchive  = 0.20
-ExtUtils::CChecker = 0
+Alien::Base::Wrapper = 1.02
+Alien::Libarchive    = 0.28
+ExtUtils::CChecker   = 0
 
 [Author::Plicease::Upload]
 cpan = 1
@@ -45,3 +46,6 @@ filename = xs/ppport.h
 [MathInt64]
 dir = xs
 
+[Author::Plicease::TravisInstall]
+repo = Perl5-Alien/Alien-Build
+repo = plicease/Alien-Libarchive3
