@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Switch to Alien::Libarchive3
 
 2.06      2017-03-24 10:32:59 -0400
   - Reverted changes in 2.05_01 nad 2.05_02
